2008-09-29  Nick Clifton  <nickc@redhat.com>

	PR 6878
	* app.c (do_scrub_chars): Only issue warnings about tick
	characters detected in symbol strings if hex ticks are supported.

2008-09-29  Nick Clifton  <nickc@redhat.com>

	* dw2gencfi.c (output_cfi_insn): Fix typo in invocation of
	tc_cfi_emit_pcrel_expr macro.

2008-09-28  Daniel Jacobowitz  <dan@codesourcery.com>

	* NEWS: Mention .cfi_val_encoded_addr.

2008-09-26  Eric Botcazou  <ebotcazou@adacore.com>

	* Makefile.am (TARG_ENV_HFILES): Add config/te-solaris.h.
	* Makefile.in (TARG_ENV_HFILES): Likewise.
	* configure.tgt (Solaris targets): Set em=solaris.
	* config/te-solaris.h: New file.

2008-09-25  Richard Henderson  <rth@redhat.com>

	* dw2gencfi.c (DWARF2_ADDR_SIZE): Provide default.
	(struct cfi_insn_data): Add ea member.
	(CFI_val_encoded_addr, dot_cfi_val_encoded_addr): New.
	(output_cfi_insn): Handle CFI_val_encoded_addr.
	(select_cie_for_fde): Don't match CFI_val_encoded_addr.
	* doc/as.texinfo (.cfi_val_encoded_addr): Document.

2008-09-25  Alan Modra  <amodra@bigpond.net.au>

	PR 6913
	* listing.c (print_options): Don't call fprintf without format string.

2008-09-19  Alan Modra  <amodra@bigpond.net.au>

	* write.c (md_register_arithmetic): Define.
	(fixup_segment): Pass segment to TC_FORCE_RELOCATION_SUB_ABS,
	TC_FORCE_RELOCATION_SUB_LOCAL, TC_VALIDATE_FIX_SUB invocations.
	Modify error message when registers involved.
	(TC_FORCE_RELOCATION_SUB_ABS): Heed md_register_arithmetic.
	(TC_FORCE_RELOCATION_SUB_LOCAL, TC_VALIDATE_FIX_SUB): Likewise.
	* config/tc-frv.h (TC_FORCE_RELOCATION_SUB_LOCAL): Likewise.
	* config/tc-hppa.h (TC_FORCE_RELOCATION_SUB_LOCAL): Likewise.
	* config/tc-mn10300.h (TC_VALIDATE_FIX_SUB): Likewise.
	* config/tc-sh.h (TC_FORCE_RELOCATION_SUB_ABS): Likewise.
	(TC_FORCE_RELOCATION_SUB_LOCAL, TC_VALIDATE_FIX_SUB): Likewise.
	* config/tc-sh64.h (TC_VALIDATE_FIX_SUB): Likewise.
	* config/tc-xtensa.h (TC_VALIDATE_FIX_SUB): Likewise.